syntax = "proto3";

option go_package = "./;api";

service Fibonacci {
  rpc CalcFibonacciSequence(CalcFibonacciSequenceReq) returns (CalcFibonacciSequenceResponse) {}
}

message CalcFibonacciSequenceReq {
  uint32 x = 1;
  uint32 y = 2;
}

message CalcFibonacciSequenceResponse {
  repeated string fibonacciSequence = 1;
}